--- a/src/personal_edit_page.html
+++ b/src/personal_edit_page.html
@@ -48,80 +48,56 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (setting) -->
-
-      <!-- Unnamed (Shape) -->
-      <div id="u174" class="ax_default icon">
-        <img id="u174_img" class="img " src="images/home_page/u70.svg"/>
-        <div id="u174_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Shape) -->
-      <div id="u175" class="ax_default icon">
-        <img id="u175_img" class="img " src="images/home_page/u71.svg"/>
-        <div id="u175_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Shape) -->
-      <div id="u176" class="ax_default icon">
-        <img id="u176_img" class="img " src="images/home_page/u72.svg"/>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u176" class="ax_default box_1">
+        <div id="u176_div" class=""></div>
         <div id="u176_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
-      <div id="u173" style="display:none; visibility:hidden;"></div>
 
-      <!-- Unnamed (menu) -->
+      <!-- Unnamed (setting) -->
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u178" class="ax_default box_1">
-        <div id="u178_div" class=""></div>
+      <!-- Unnamed (Shape) -->
+      <div id="u178" class="ax_default icon">
+        <img id="u178_img" class="img " src="images/home_page/u71.svg"/>
         <div id="u178_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u179" class="ax_default heading_1">
-        <div id="u179_div" class=""></div>
-        <div id="u179_text" class="text ">
-          <p><span>Menu</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u180" class="ax_default heading_2">
-        <div id="u180_div" class=""></div>
-        <div id="u180_text" class="text ">
-          <p><span>API</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Ellipse) -->
-      <div id="u181" class="ax_default shape">
-        <img id="u181_img" class="img " src="images/home_page/u21.svg"/>
-        <div id="u181_text" class="text " style="display:none; visibility: hidden">
+      <!-- Unnamed (Shape) -->
+      <div id="u179" class="ax_default icon">
+        <img id="u179_img" class="img " src="images/home_page/u72.svg"/>
+        <div id="u179_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
+      <!-- Unnamed (Shape) -->
+      <div id="u180" class="ax_default icon">
+        <img id="u180_img" class="img " src="images/home_page/u73.svg"/>
+        <div id="u180_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+      <div id="u177" style="display:none; visibility:hidden;"></div>
+
+      <!-- Unnamed (menu) -->
+
       <!-- Unnamed (Rectangle) -->
-      <div id="u182" class="ax_default heading_2">
+      <div id="u182" class="ax_default box_1">
         <div id="u182_div" class=""></div>
-        <div id="u182_text" class="text ">
-          <p><span>Trans record</span></p>
+        <div id="u182_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (Ellipse) -->
-      <div id="u183" class="ax_default shape">
-        <img id="u183_img" class="img " src="images/home_page/u21.svg"/>
-        <div id="u183_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u183" class="ax_default heading_1">
+        <div id="u183_div" class=""></div>
+        <div id="u183_text" class="text ">
+          <p><span>Menu</span></p>
         </div>
       </div>
 
@@ -129,13 +105,13 @@
       <div id="u184" class="ax_default heading_2">
         <div id="u184_div" class=""></div>
         <div id="u184_text" class="text ">
-          <p><span>Review policy</span></p>
+          <p><span>API</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Ellipse) -->
       <div id="u185" class="ax_default shape">
-        <img id="u185_img" class="img " src="images/home_page/u21.svg"/>
+        <img id="u185_img" class="img " src="images/home_page/u22.svg"/>
         <div id="u185_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
@@ -145,143 +121,183 @@
       <div id="u186" class="ax_default heading_2">
         <div id="u186_div" class=""></div>
         <div id="u186_text" class="text ">
-          <p><span>Information Edit</span></p>
+          <p><span>Trans record</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Ellipse) -->
       <div id="u187" class="ax_default shape">
-        <img id="u187_img" class="img " src="images/home_page/u21.svg"/>
+        <img id="u187_img" class="img " src="images/home_page/u22.svg"/>
         <div id="u187_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u188" class="ax_default image">
-        <img id="u188_img" class="img " src="images/register_page/u0.png"/>
-        <div id="u188_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u188" class="ax_default heading_2">
+        <div id="u188_div" class=""></div>
+        <div id="u188_text" class="text ">
+          <p><span>Review policy</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Vertical Line) -->
-      <div id="u189" class="ax_default line">
-        <img id="u189_img" class="img " src="images/home_page/u29.svg"/>
+      <!-- Unnamed (Ellipse) -->
+      <div id="u189" class="ax_default shape">
+        <img id="u189_img" class="img " src="images/home_page/u22.svg"/>
         <div id="u189_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (Text Field) -->
-      <div id="u190" class="ax_default button">
+      <!-- Unnamed (Rectangle) -->
+      <div id="u190" class="ax_default heading_2">
         <div id="u190_div" class=""></div>
-        <input id="u190_input" type="text" value="Log out" class="u190_input"/>
+        <div id="u190_text" class="text ">
+          <p><span>Information Edit</span></p>
+        </div>
       </div>
-      <div id="u177" style="display:none; visibility:hidden;"></div>
+
+      <!-- Unnamed (Ellipse) -->
+      <div id="u191" class="ax_default shape">
+        <img id="u191_img" class="img " src="images/home_page/u22.svg"/>
+        <div id="u191_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u192" class="ax_default image">
+        <img id="u192_img" class="img " src="images/register_page/u0.png"/>
+        <div id="u192_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Vertical Line) -->
+      <div id="u193" class="ax_default line">
+        <img id="u193_img" class="img " src="images/home_page/u30.svg"/>
+        <div id="u193_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u194" class="ax_default button">
+        <div id="u194_div" class=""></div>
+        <input id="u194_input" type="text" value="Log out" class="u194_input"/>
+      </div>
+      <div id="u181" style="display:none; visibility:hidden;"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u191" class="ax_default label">
-        <div id="u191_div" class=""></div>
-        <div id="u191_text" class="text ">
+      <div id="u195" class="ax_default label">
+        <div id="u195_div" class=""></div>
+        <div id="u195_text" class="text ">
           <p><span>Company:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u192" class="ax_default label">
-        <div id="u192_div" class=""></div>
-        <div id="u192_text" class="text ">
+      <div id="u196" class="ax_default label">
+        <div id="u196_div" class=""></div>
+        <div id="u196_text" class="text ">
           <p><span>Email:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u193" class="ax_default label">
-        <div id="u193_div" class=""></div>
-        <div id="u193_text" class="text ">
+      <div id="u197" class="ax_default label">
+        <div id="u197_div" class=""></div>
+        <div id="u197_text" class="text ">
           <p><span>Telephone(Optional):</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u194" class="ax_default label">
-        <div id="u194_div" class=""></div>
-        <div id="u194_text" class="text ">
+      <div id="u198" class="ax_default label">
+        <div id="u198_div" class=""></div>
+        <div id="u198_text" class="text ">
           <p><span>Address:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u195" class="ax_default text_field1">
-        <div id="u195_div" class=""></div>
-        <input id="u195_input" type="text" value="" class="u195_input"/>
-      </div>
-
-      <!-- Unnamed (Text Field) -->
-      <div id="u196" class="ax_default text_field1">
-        <div id="u196_div" class=""></div>
-        <input id="u196_input" type="email" value="" class="u196_input"/>
-      </div>
-
-      <!-- Unnamed (Text Field) -->
-      <div id="u197" class="ax_default text_field1">
-        <div id="u197_div" class=""></div>
-        <input id="u197_input" type="tel" value="" class="u197_input"/>
-      </div>
-
-      <!-- Unnamed (Text Field) -->
-      <div id="u198" class="ax_default text_field1">
-        <div id="u198_div" class=""></div>
-        <input id="u198_input" type="text" value="" class="u198_input"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u199" class="ax_default label">
+      <div id="u199" class="ax_default text_field1">
         <div id="u199_div" class=""></div>
-        <div id="u199_text" class="text ">
-          <p><span>Password:</span></p>
-        </div>
+        <input id="u199_input" type="text" value="" class="u199_input"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
       <div id="u200" class="ax_default text_field1">
         <div id="u200_div" class=""></div>
-        <input id="u200_input" type="text" value="" class="u200_input"/>
+        <input id="u200_input" type="email" value="" class="u200_input"/>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u201" class="ax_default text_field1">
+        <div id="u201_div" class=""></div>
+        <input id="u201_input" type="tel" value="" class="u201_input"/>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u202" class="ax_default text_field1">
+        <div id="u202_div" class=""></div>
+        <input id="u202_input" type="text" value="" class="u202_input"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u203" class="ax_default label">
+        <div id="u203_div" class=""></div>
+        <div id="u203_text" class="text ">
+          <p><span>Password:</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u204" class="ax_default text_field1">
+        <div id="u204_div" class=""></div>
+        <input id="u204_input" type="text" value="" class="u204_input"/>
       </div>
 
       <!-- Unnamed (Line) -->
-      <div id="u201" class="ax_default line">
-        <img id="u201_img" class="img " src="images/personal_edit_page/u201.svg"/>
-        <div id="u201_text" class="text " style="display:none; visibility: hidden">
+      <div id="u205" class="ax_default line">
+        <img id="u205_img" class="img " src="images/personal_edit_page/u205.svg"/>
+        <div id="u205_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u202" class="ax_default label">
-        <div id="u202_div" class=""></div>
-        <div id="u202_text" class="text ">
+      <div id="u206" class="ax_default label">
+        <div id="u206_div" class=""></div>
+        <div id="u206_text" class="text ">
           <p><span>Contact person's name:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u203" class="ax_default text_field1">
-        <div id="u203_div" class=""></div>
-        <input id="u203_input" type="text" value="" class="u203_input"/>
+      <div id="u207" class="ax_default text_field1">
+        <div id="u207_div" class=""></div>
+        <input id="u207_input" type="text" value="" class="u207_input"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u204" class="ax_default button">
-        <div id="u204_div" class=""></div>
-        <input id="u204_input" type="text" value="Cancel" class="u204_input"/>
+      <div id="u208" class="ax_default button">
+        <div id="u208_div" class=""></div>
+        <input id="u208_input" type="text" value="Cancel" class="u208_input"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u205" class="ax_default button">
-        <div id="u205_div" class=""></div>
-        <input id="u205_input" type="text" value="Save info" class="u205_input"/>
+      <div id="u209" class="ax_default button">
+        <div id="u209_div" class=""></div>
+        <input id="u209_input" type="text" value="Save info" class="u209_input"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u210" class="ax_default heading_1">
+        <div id="u210_div" class=""></div>
+        <div id="u210_text" class="text ">
+          <p><span style="text-decoration:underline ;">Information Edit</span></p>
+        </div>
       </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
